taiga/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: taiga
    tier: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: taiga
    tier: postgres
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: taiga
    tier: postgres
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taiga
        tier: postgres
    spec:
      containers:
      - image: postgres
        name: postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
